--- a/programming/scala/programming-in-scala-odersky/4-classes-and-objects.ipynb
+++ b/programming/scala/programming-in-scala-odersky/4-classes-and-objects.ipynb
@@ -2,7 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "# Gen stuff"
    ]
@@ -12,7 +17,11 @@
    "execution_count": null,
    "metadata": {
     "cell_style": "split",
-    "collapsed": true
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -31,25 +40,43 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "cell_style": "split"
+    "cell_style": "split",
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "source": [
+    "* Public is Scala’s default access level.\n",
     "* Method body can be on the same line without braces  \n",
     "* Methods which return **Unit** type can be written w/o equals sign\n",
-    "    * like *print_x* method in class **Animal**"
+    "    * like *print_x* method in class **Animal**\n",
+    "    * leave off the result type and the equals sign, \n",
+    "      and enclose the body of the method in curly braces"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "source": [
+    " "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "cell_style": "split",
-    "collapsed": true
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -59,7 +86,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "cell_style": "split"
+    "cell_style": "split",
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "source": [
     "No need for paratheses for method calls with no args"
@@ -109,29 +140,110 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "cell_style": "split"
+    "cell_style": "split",
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "source": [
     "Instances of the same class can access each others' privates..    \n",
-    "much like an animal..  "
+    "much like an animal.. ooooh. those animals...."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Warning**  \n",
+    "whenever you leave off the equals sign before the body of a function, its result type will definitely be Unit."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**semicolon inference**  \n",
+    "A semicolon is required if you write multiple statements on a single line:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```scala\n",
+    "x\n",
+    "+ y\n",
+    "```\n",
+    "parses as two statements, x and +y  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```scala\n",
+    "(x\n",
+    "+ y)\n",
+    "```\n",
+    "parses as a single statement, ```x+y```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```scala\n",
+    "x +\n",
+    "y\n",
+    "```\n",
+    "parses as a single statement, ```x+y```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The rules of semicolon inference**  \n",
+    "The precise rules for statement separation are surprisingly simple for how well they work.  \n",
+    "In short, a line ending is treated as a semicolon unless one of the following conditions is true:  \n",
+    "1. The line in question ends in a word that would not be legal as the end of a statement, such as a period or an infix operator.\n",
+    "1. The next line begins with a word that cannot start a statement.\n",
+    "1. The line ends while inside parentheses (...) or brackets [...], because these cannot contain multiple statements anyway."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "source": [
     "# Singleton Objects"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "classes in Scala cannot have static members"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-06T11:11:01.513239",
-     "start_time": "2017-01-06T05:41:01.016Z"
+     "end_time": "2017-03-27T15:40:19.645428",
+     "start_time": "2017-03-27T10:10:17.276Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -140,7 +252,7 @@
        "defined \u001b[32mclass\u001b[39m \u001b[36mCheckSumAcc\u001b[39m"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,14 +267,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-06T11:50:16.913622",
-     "start_time": "2017-01-06T06:20:16.156Z"
+     "end_time": "2017-03-27T15:40:21.663350",
+     "start_time": "2017-03-27T10:10:20.349Z"
     },
     "cell_style": "split",
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -171,7 +287,7 @@
        "defined \u001b[32mobject\u001b[39m \u001b[36mCheckSumAcc\u001b[39m"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,21 +311,44 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "cell_style": "split"
+    "cell_style": "split",
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "source": [
-    "**Companion object**: Singleton object w/ same name as the class"
+    "**Companion object**: Singleton object w/ same name as the class\n",
+    "\n",
+    "You must define both the class and its companion object in the same source file.   \n",
+    "A class and its companion object can access each other’s private members.\n",
+    "\n",
+    "If you are a Java programmer, one way to think of singleton objects is as the home for any static methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining a singleton object doesn’t define a type  \n",
+    "Each singleton object is implemented as an instance of a synthetic class.  \n",
+    "A singleton object is initialized the first time some code accesses it.  \n",
+    "A singleton object that does not share the same name with a companion class is called a standalone object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-06T12:17:07.636167",
-     "start_time": "2017-01-06T06:47:07.624Z"
+     "end_time": "2017-03-27T15:40:10.554839",
+     "start_time": "2017-03-27T10:10:09.838Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -228,15 +367,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To run a Scala program,   \n",
+    "you must supply the name of a standalone singleton object with a main method that takes one parameter,  \n",
+    "an Array[String],  \n",
+    "and has a result type of Unit. \n",
+    "\n",
+    "Any standalone object with a main method of the proper signature can be used as the entry point into an application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scala implicitly imports members of packages java.lang and scala,\n",
+    "as well as the members of a singleton object named Predef.  \n",
+    "\n",
+    "you’re actually invoking println on Predef.   \n",
+    "(Predef.println turns around and invokes Console.println, which does the real work.)  \n",
+    "When you say assert, you’re invoking Predef.assert."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```shell\n",
+    "scala filename.scala\n",
+    "```\n",
+    "compiles your source files, but there may be a perceptible delay before the compilation finishes.  \n",
+    "The reason is that every time the compiler starts up,   \n",
+    "it spends time scanning the contents of jar files and doing other initial work before it even looks at the fresh source files you submit to it.  \n",
+    "For this reason, the Scala distribution also includes a Scala compiler daemon called fsc (for fast Scala compiler).   \n",
+    "You use it like this:\n",
+    "```shell\n",
+    "  $ fsc ChecksumAccumulator.scala Summer.scala\n",
+    "```\n",
+    "\n",
+    "The first time you run fsc, it will create a local server daemon attached to a port on your computer.  \n",
+    "It will then send the list of files to compile to the daemon via the port, and the daemon will compile the files.   \n",
+    "The next time you run fsc, the daemon will already be running, so fsc will simply send the file list to the daemon, which will immediately compile the files.    \n",
+    "Using fsc, you only need to wait for the Java runtime to startup the first time.  \n",
+    "If you ever want to stop the fsc daemon, you can do so with fsc -shutdown."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-06T13:11:28.170704",
-     "start_time": "2017-01-06T07:41:27.306Z"
+     "end_time": "2017-03-27T15:40:24.533988",
+     "start_time": "2017-03-27T10:10:23.652Z"
     },
     "cell_style": "split",
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -245,7 +435,7 @@
        "defined \u001b[32mobject\u001b[39m \u001b[36mTraitExposition\u001b[39m"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,17 +451,40 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "cell_style": "split"
+    "cell_style": "split",
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "source": [
     "you first write “extends Application” after the name of your singleton object. Then instead of writing a main method, you place the code you would have put in the main method directly between the curly braces of the singleton object. That’s it. You can compile and run this appli- cation just like any other."
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "source": [
+    "* you can’t use this trait if you need to access command-line arguments   \n",
+    "* Because of some restrictions in the JVM threading model, you need an explicit main method if your program is multi-threaded.\n",
+    "* Some implementations of the JVM do not optimize the initialization code of an object which is executed by the Application trait. So you should inherit from Application only when your program is relatively simple and single-threaded."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -280,22 +493,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Scala",
    "language": "scala",
