--- a/statistics/all-of-statistics/parallel-mf.ipynb
+++ b/statistics/all-of-statistics/parallel-mf.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -10,8 +13,19 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.96\n"
+     ]
+    }
+   ],
    "source": [
     "n, T = 10, 10**2\n",
     "\n",
@@ -27,8 +41,29 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rc ids:  [0, 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<DirectView [0, 1]>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ipyparallel import Client\n",
     "#sshserver='you@192.168.1.102'\n",
@@ -41,8 +76,22 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "serial_result = map(lambda x:x**10, range(32))\n",
     "parallel_result = dview.map_sync(lambda x: x**10, range(32))\n",
@@ -51,15 +100,29 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start\n"
+     ]
+    }
+   ],
    "source": [
     "print('start')"
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -74,7 +137,10 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "C_remote = pmul(A,A)\n"
@@ -82,8 +148,19 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "aa = (C_local == C_remote).all()\n",
     "print(aa)"
@@ -91,7 +168,10 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "@dview.remote(block=True)\n",
@@ -104,8 +184,20 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['range(0, 3)', 'range(3, 5)']\n",
+      "['0', '1', '2', '3', '4']\n"
+     ]
+    }
+   ],
    "source": [
     "@dview.parallel(block=True)\n",
     "def echo(x):\n",
@@ -132,7 +224,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
