--- a/statistics/all-of-statistics/Regression.ipynb
+++ b/statistics/all-of-statistics/Regression.ipynb
@@ -109,7 +109,10 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": []
   }
@@ -130,7 +133,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
