--- a/statistics/all-of-statistics/mean-squared-error.ipynb
+++ b/statistics/all-of-statistics/mean-squared-error.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -450,7 +453,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
