--- a/statistics/all-of-statistics/tmp-regression.ipynb
+++ b/statistics/all-of-statistics/tmp-regression.ipynb
@@ -124,7 +124,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
