--- a/programming/scala/programming-in-scala-odersky/7-built-in-control-structures.ipynb
+++ b/programming/scala/programming-in-scala-odersky/7-built-in-control-structures.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -67,6 +69,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -96,6 +100,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -133,6 +139,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -233,6 +241,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -292,6 +302,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -327,7 +339,13 @@
      "end_time": "2017-03-28T12:14:14.426682",
      "start_time": "2017-03-28T06:44:09.632Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -387,7 +405,13 @@
      "end_time": "2017-03-28T12:17:22.389582",
      "start_time": "2017-03-28T06:47:21.290Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -422,7 +446,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "# Exception handling"
    ]
@@ -435,7 +466,13 @@
      "end_time": "2017-03-28T12:38:27.375075",
      "start_time": "2017-03-28T07:08:26.800Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -467,7 +504,13 @@
      "end_time": "2017-03-28T12:38:33.339925",
      "start_time": "2017-03-28T07:08:33.256Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -502,7 +545,13 @@
      "end_time": "2017-03-28T14:17:15.943911",
      "start_time": "2017-03-28T08:47:15.314Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -530,7 +579,13 @@
      "end_time": "2017-03-28T14:17:30.176556",
      "start_time": "2017-03-28T08:47:29.596Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -552,7 +607,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "# match"
    ]
@@ -565,7 +627,13 @@
      "end_time": "2017-03-28T14:25:44.991984",
      "start_time": "2017-03-28T08:55:44.034Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -606,14 +674,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "underscore (_), a wildcard symbol frequently used in Scala as a placeholder for a completely unknown value."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "match expressions result in a value, so the following also works"
    ]
@@ -626,7 +708,13 @@
      "end_time": "2017-03-28T14:26:10.153162",
      "start_time": "2017-03-28T08:56:09.234Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -663,7 +751,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -672,7 +766,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -681,7 +781,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -690,7 +796,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -699,7 +811,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -708,7 +826,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -717,7 +841,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -726,7 +856,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -735,7 +871,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -744,7 +886,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -753,7 +901,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -762,7 +916,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -771,7 +931,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -780,7 +946,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -789,7 +961,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -798,7 +976,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -807,7 +991,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -816,7 +1006,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -825,7 +1021,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -834,7 +1036,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -843,7 +1051,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
