--- a/books/learning-spark/python/3 - Programming with RDDs.ipynb
+++ b/books/learning-spark/python/3 - Programming with RDDs.ipynb
@@ -940,9 +940,9 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "PySpark (Spark 2.0.0)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyspark"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
