sampling: basic sampling

--- a/ml/sampling-methods/index.ipynb
+++ b/ml/sampling-methods/index.ipynb
@@ -2,7 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "Sampling Methods\n",
     "================"
@@ -10,8 +15,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
+    "1. [Basic Sampling](basic-sampling.ipynb)\n",
     "1. [Box Mueller method](box-muller-method.ipynb)\n",
     "1. [Rejection Sampling](rejection-sampling.ipynb)\n",
     "1. [Adaptive Rejection Sampling](adaptive-rejection-sampling.ipynb)\n",
@@ -23,7 +34,7 @@
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -36,6 +47,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -43,8 +56,28 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "30px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
